# rmi-assignments

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  croblink.py  loop.sh  loopC4.sh  mainC1.py  mainC2.py  mainC3.py  mainC4.py  run.sh  test-run.sh  test.sh  zip.sh
include/agent/: agent.h  agentC4.h  controller.h  localmap.h  localpose.h  map.h  pose.h  robot.h  utils.h
include/robSock/: RobSock.h  croblink.h
patches/: automateRuns_CiberRatoTools.patch
src/: CMakeLists.txt  main.cpp  mainRob.cpp
src/agent/: CMakeLists.txt  agentC4.cpp  controller.cpp  localmap.cpp  localpose.cpp  map.cpp  pose.cpp  utils.cpp
src/challenges/: agentC4.cpp  agentC4.h
src/robSock/: CMakeLists.txt  RobSock.cpp  cmeasures.cpp  croblink.cpp  csimparam.cpp  netif.cpp  structureparser.cpp
test/: CMakeLists.txt  TestPerceivedMap.cpp  test-map.cpp
tests/: CMakeLists.txt  test-map.cpp
